# mrab-regex

./: .hgeol  .travis.yml  MANIFEST.IN  MANIFEST.in  README.md  README.rst  bitbucket-pipelines.yml  changelog.txt  pyproject.toml  setup.py
.github/workflows/: main.yml
PyPI/: MANIFEST  MANIFEST.in  PKG-INFO  README  setup.py
docs/: Features.html  Features.rst  UnicodeProperties.rst
regex_2/: Features.html  Features.rst  UnicodeProperties.txt  _regex.c  _regex.h  _regex_core.py  _regex_unicode.c  _regex_unicode.h  regex.py  test_regex.py
regex_2/Python/: _regex_core.py  regex.py  test_regex.py
regex_2/regex/: _regex.c  _regex.h  _regex_unicode.c  _regex_unicode.h
regex_3/: Features.html  Features.rst  UnicodeProperties.txt  _regex.c  _regex.h  _regex_core.py  _regex_unicode.c  _regex_unicode.h  regex.py  test_regex.py
regex_3/Python/: _regex_core.py  regex.py  test_regex.py
regex_3/regex/: _regex.c  _regex.h  _regex_unicode.c  _regex_unicode.h
tools/: build_regex_unicode.py
